{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 318,
  "lineage": "396a784b-033b-b549-ea36-557abc0f5ddf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:internet-gateway/igw-0894d36dfdfda1667",
            "id": "igw-0894d36dfdfda1667",
            "owner_id": "475893214891",
            "tags": {
              "Name": "gateway_wissam"
            },
            "tags_all": {
              "Name": "gateway_wissam"
            },
            "vpc_id": "vpc-0f894ed9478a9a4f6"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:vpc/vpc-0f894ed9478a9a4f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "50.20.0.0/16",
            "default_network_acl_id": "acl-06dc8d792ee05093d",
            "default_route_table_id": "rtb-0fcc05bcb4d2a83cc",
            "default_security_group_id": "sg-0a1a1d98e8008b5e4",
            "dhcp_options_id": "dopt-06c97e6874c09940c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f894ed9478a9a4f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fcc05bcb4d2a83cc",
            "owner_id": "475893214891",
            "tags": {
              "Name": "app-vpc-wissam"
            },
            "tags_all": {
              "Name": "app-vpc-wissam"
            }
          }
        }
      ]
    },
    {
      "module": "module.docker_back",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "app_security_group_private",
      "provider": "module.docker_back.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:security-group/sg-0a1a1d98e8008b5e4",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1a1d98e8008b5e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "475893214891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-wissam-public"
            },
            "tags_all": {
              "Name": "sg-wissam-public"
            },
            "vpc_id": "vpc-0f894ed9478a9a4f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.docker_back",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "module.docker_back.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00756a2b7a21e2bd3",
            "arn": "arn:aws:ec2:us-west-1:475893214891:instance/i-0c4b134237bc81c6d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4b134237bc81c6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-055dfb2d01d0d6871"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055dfb2d01d0d6871",
            "private_dns": "ip-50-20-20-25.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.20.20.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0683e3be98ae3d724",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0332d71b634d75567",
            "tags": {
              "Name": "EC2-wissam-private"
            },
            "tags_all": {
              "Name": "EC2-wissam-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1a1d98e8008b5e4"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.docker_back.aws_network_interface.net_inter",
            "module.docker_back.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.docker_back",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "net_inter",
      "provider": "module.docker_back.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:network-interface/eni-055dfb2d01d0d6871",
            "id": "eni-055dfb2d01d0d6871",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:52:28:cc:3f:c3",
            "owner_id": "475893214891",
            "private_ip": "50.20.20.25",
            "private_ip_list": [
              "50.20.20.25"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "50.20.20.25"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a1a1d98e8008b5e4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0332d71b634d75567",
            "tags": {
              "Name": "network-interface"
            },
            "tags_all": {
              "Name": "network-interface"
            }
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.docker_back.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.docker_back",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_priv",
      "provider": "module.docker_back.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:route-table/rtb-03d93a983d952048f",
            "id": "rtb-03d93a983d952048f",
            "owner_id": "475893214891",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app_route_table_private"
            },
            "tags_all": {
              "Name": "app_route_table_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f894ed9478a9a4f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.docker_back",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_route_table",
      "provider": "module.docker_back.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8672cd4e01580e3",
            "route_table_id": "rtb-03d93a983d952048f",
            "subnet_id": "subnet-0332d71b634d75567"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.docker_back.aws_route_table.app_route_priv",
            "module.docker_back.aws_route_table.app_route_pub",
            "module.docker_back.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.docker_back",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "module.docker_back.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:subnet/subnet-0332d71b634d75567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "50.20.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0332d71b634d75567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475893214891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-wissam"
            },
            "tags_all": {
              "Name": "app-vpc-wissam"
            },
            "vpc_id": "vpc-0f894ed9478a9a4f6"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.docker_front",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "app_security_group_public",
      "provider": "module.docker_front.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:security-group/sg-0a1a1d98e8008b5e4",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1a1d98e8008b5e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "475893214891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-wissam-public"
            },
            "tags_all": {
              "Name": "sg-wissam-public"
            },
            "vpc_id": "vpc-0f894ed9478a9a4f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.docker_front",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "module.docker_front.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00756a2b7a21e2bd3",
            "arn": "arn:aws:ec2:us-west-1:475893214891:instance/i-0f6fa86102965bd25",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6fa86102965bd25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0873a70c059ef55a3"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0873a70c059ef55a3",
            "private_dns": "ip-50-20-10-25.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.20.10.25",
            "public_ip": "54.215.183.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f12e57eec5185227",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03866ee553130e176",
            "tags": {
              "Name": "EC2-wissam-public"
            },
            "tags_all": {
              "Name": "EC2-wissam-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1a1d98e8008b5e4"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.docker_front.aws_network_interface.net_inter",
            "module.docker_front.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.docker_front",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "net_inter",
      "provider": "module.docker_front.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:network-interface/eni-0873a70c059ef55a3",
            "id": "eni-0873a70c059ef55a3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d2:f7:2d:2e:8f",
            "owner_id": "475893214891",
            "private_ip": "50.20.10.25",
            "private_ip_list": [
              "50.20.10.25"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "50.20.10.25"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a1a1d98e8008b5e4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03866ee553130e176",
            "tags": {
              "Name": "network-interface"
            },
            "tags_all": {
              "Name": "network-interface"
            }
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.docker_front.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.docker_front",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_pub",
      "provider": "module.docker_front.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:route-table/rtb-09dc26ca0490989fa",
            "id": "rtb-09dc26ca0490989fa",
            "owner_id": "475893214891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0894d36dfdfda1667",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app_route_table_public"
            },
            "tags_all": {
              "Name": "app_route_table_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f894ed9478a9a4f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.docker_front",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_route_table",
      "provider": "module.docker_front.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071957b02ca049de6",
            "route_table_id": "rtb-09dc26ca0490989fa",
            "subnet_id": "subnet-03866ee553130e176"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.docker_front.aws_route_table.app_route_priv",
            "module.docker_front.aws_route_table.app_route_pub",
            "module.docker_front.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.docker_front",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "module.docker_front.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:475893214891:subnet/subnet-03866ee553130e176",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "50.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03866ee553130e176",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475893214891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-wissam"
            },
            "tags_all": {
              "Name": "app-vpc-wissam"
            },
            "vpc_id": "vpc-0f894ed9478a9a4f6"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    }
  ]
}